crates/ship-policy/src/snapshots/ship_policy__help__tests__hint_captain_no_task.snap
---
source: crates/ship-policy/src/help.rs
expression: "short_hint(AgentRole::Captain, None)"
---
Available actions:
- `captain_assign` — Assign a task to your mate
- `captain_git_status` — Check git status of the session worktree
- `code` — Read, search, edit files, run commands, commit
- `web_search` — Search the web
